@@ -10,6 +10,7 @@ Version 1.3.16+svn:
    * scrolling to the leader the very first time happens instantly now
  * miscellaneous and bug fixes:
    * replays of midgame saves get the right recall list now (bug #10868)
+   * Fixed controller problems when reloading MP game (bug #11046 and bit more)
    
 Version 1.3.16:
  * campaigns:
